k8s/app/app-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myapp
  namespace: app
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system

  hostnames:
    - myapp.local

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: myapp
          port: 80
